# devcovenant

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEVCOVENANT.md  LICENSE  LONG_DESCRIPTION.md  MANIFEST.in  PLAN.md  POLICY_MAP.md  PROFILE_MAP.md  PROFILE_POLICY_DRAFT.md  README.md  SPEC.md  SPEC_old.md  THIRD_PARTY_LICENSES.md  devcov_check.py  devcovenant_check.py  pyproject.toml  requirements.in
.github/workflows/: ci.yml  publish.yml
devcovenant/: README.md  __init__.py  base.py  check.py  cli.py  config.yaml  config_old.yaml  deploy.py  engine.py  gate.py  install.py  manifest.json  parser.py  policy_locations.py  refresh.py  registry.json  run_pre_commit.py  run_tests.py  selectors.py  test.py  undeploy.py  uninstall.py  update_hashes.py  update_lock.py  update_test_status.py  upgrade.py
devcovenant/common_policy_patches/: README.md
devcovenant/common_policy_scripts/: changelog_coverage.py  dependency_license_sync.py  devcov_self_enforcement.py  devcov_structure_guard.py  devflow_run_gates.py  documentation_growth_tracking.py  gcv_script_naming.py  last_updated_placement.py  line_length_limit.py  managed_bench.py  raw_string_escapes.py  security_scanner.py
devcovenant/core/: base.py  check.py  cli_options.py  command_runtime.py  deploy.py  engine.py  execution.py  execution_runtime.py  gate_runtime.py  gates.py  generate_policy_metadata_schema.py  install.py  manifest.py  metadata_normalizer.py  metadata_runtime.py  parser.py  policy_assets.yaml  policy_descriptor.py  policy_freeze.py  policy_locations.py  policy_replacements.py  policy_replacements.yaml  policy_runtime.py  policy_schema.py  policy_texts.py  profile_catalog.yaml  profile_runtime.py  profiles.py  refresh.py  refresh_all.py  refresh_policies.py  refresh_registry.py  refresh_runtime.py  registry.py  registry_runtime.py  repo_refresh.py  run_pre_commit.py  run_tests.py  selector_runtime.py  stock_policy_texts.json  (+10 more)
devcovenant/core/profiles/python/assets/: pyproject.toml  venv.md
devcovenant/docs/: README.md  (+9 more)
licenses/: AUTO_LICENSE_SYNC.txt  PyYAML-6.0.2.txt  pre-commit-4.5.1.txt  pytest-9.0.2.txt  semver-3.0.2.txt
tools/: install_devcovenant.py  run_pre_commit.py  uninstall_devcovenant.py  update_lock.py  update_test_status.py
(+824 files in other folders)
