[project]
name = "devcovenant"
version = "0.2.6"
description = "Self-enforcing development policy engine"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "pre-commit>=4.5.1",
  "PyYAML>=6.0.2",
  "pytest>=9.0.2",
  "semver>=3.0.2",
]
[tool.setuptools]
include-package-data = true
[project.scripts]
devcovenant = "devcovenant.cli:main"
[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.ruff]
line-length = 79

[tool.ruff.format]

[tool.setuptools.packages.find]
include = ["devcovenant*"]
